[BUG] add nowrap for code && fixed phodal/mifa#2

--- a/css/wechat-fix.css
+++ b/css/wechat-fix.css
@@ -67,7 +67,7 @@ img {
 }
 
 .prettyprint code {
-  white-space: pre-wrap !important;
+  white-space: nowrap;
 }
 
 p {
